--- a/index.html
+++ b/index.html
@@ -35,18 +35,13 @@
         <i class="fa fa-bars"></i>
     </a>
 </div>
-
-
 <div class="hidden hero">
     <video loop muted autoplay preload="auto">
-        <source src="water.mp4" type="video/mp4" mute >
+        <source src="water.mp4" type="video/mp4" playsinline>
+        <img src="fallback-image.jpg" alt="Hero Section">
         Your browser does not support the video tag.
     </video>
     <div class="hidden caption">
-<!--        <h1>curious creativity</h1>-->
-
-
-
         <h2>full stack developer from Bath, Somerset</h2>
 
 
