possible resolve for mobile responsiveness error

--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
         <i class="fa fa-bars"></i>
     </a>
 </div>
-<div class="hidden hero">
-    <video loop muted autoplay preload="auto">
+<div class="hero">
+    <!-- Desktop Video -->
+    <video class="hero-video" loop muted autoplay preload="auto">
         <source src="water.mp4" type="video/mp4" playsinline>
-        <img src="fallback-image.jpg" alt="Hero Section">
         Your browser does not support the video tag.
     </video>
-    <div class="hidden caption">
-        <h2>full stack developer from Bath, Somerset</h2>
 
+    <!-- Mobile Image -->
+    <div class="hero-image">
+        <img src="fallback-image.png" alt="Hero Section Image">
+    </div>
 
-
-        <!--        SOCIAL BUTTONS-->
+    <div class="caption">
+        <h2>Full Stack Developer from Bath, Somerset</h2>
         <div class="socialIcons">
             <a href="mailto:e.ferrari@live.co.uk" target="_blank"><i class='bx bx-envelope'></i></a>
             <a href="https://github.com/emferrari31" target="_blank"><i class='bx bxl-github'></i></a>
@@ -55,6 +57,9 @@
         </div>
     </div>
 </div>
+
+
+
 <section  id="jumpAboutMe" class="hidden aboutMeSection">
     <div class="aboutMeCard">
         <h1>
