--- a/index.html
+++ b/index.html
@@ -35,20 +35,18 @@
         <i class="fa fa-bars"></i>
     </a>
 </div>
-<div class="hero">
-    <!-- Desktop Video -->
-    <video class="hero-video" loop muted autoplay preload="auto">
+<div class="hidden hero">
+    <video loop muted autoplay preload="auto">
         <source src="water.mp4" type="video/mp4" playsinline>
+        <img src="fallback-image.jpg" alt="Hero Section">
         Your browser does not support the video tag.
     </video>
+    <div class="hidden caption">
+        <h2>full stack developer from Bath, Somerset</h2>
 
-    <!-- Mobile Image -->
-    <div class="hero-image">
-        <img src="fallback-image.png" alt="Hero Section Image">
-    </div>
 
-    <div class="caption">
-        <h2>Full Stack Developer from Bath, Somerset</h2>
+
+        <!--        SOCIAL BUTTONS-->
         <div class="socialIcons">
             <a href="mailto:e.ferrari@live.co.uk" target="_blank"><i class='bx bx-envelope'></i></a>
             <a href="https://github.com/emferrari31" target="_blank"><i class='bx bxl-github'></i></a>
@@ -57,8 +55,6 @@
         </div>
     </div>
 </div>
-
-
 
 <section  id="jumpAboutMe" class="hidden aboutMeSection">
     <div class="aboutMeCard">
