error made with fallback image, trying again

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 <div class="hidden hero">
     <video loop muted autoplay preload="auto">
         <source src="water.mp4" type="video/mp4" playsinline>
+        <img src="fallback-image.PNG" alt="Hero Section">
         Your browser does not support the video tag.
     </video>
     <div class="hidden caption">
         <h2>full stack developer from Bath, Somerset</h2>
+
+
 
         <!--        SOCIAL BUTTONS-->
         <div class="socialIcons">
