animated buttons and icons

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 </head>
 <body>
 <div id ="jumpHome" class="topnav">
-    <a href="#home" class="active">ef</a>
+    <a href="#home" class="logo">ef</a>
 <!--    <a href="#home" class="active">-->
 <!--        <img class="logo"  src="assets/EF.svg" alt="EF Logo"/>-->
 <!--    </a>-->
     <div id="myLinks">
-        <a href="#jumpHome">Home</a>
-        <a href="#jumpAboutMe">About</a>
-        <a href="#jumpProjects">Projects</a>
-        <a href="#jumpBlog">Blog</a>
-        <a href="#jumpContact">Contact</a>
+        <a href="#jumpHome">home</a>
+        <a href="#jumpAboutMe">about</a>
+        <a href="#jumpProjects">projects</a>
+        <a href="#jumpBlog">blog</a>
+        <a href="#jumpContact">contact</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
