--- a/index.html
+++ b/index.html
@@ -8,33 +8,26 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@311&family=Chakra+Petch:ital,wght@0,300;0,400;
-    0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Overpass:ital,wght@0,100..900;1,100..900&family=Poppins:ital,
-    wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,
-    900&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@311&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Overpass:wght@0,100..900;1,100..900&family=Poppins:wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
-<div id ="jumpHome" class="topnav">
+
+<div id="jumpHome" class="topnav">
     <a href="#home" class="logo">ef</a>
-<!--    <a href="#home" class="active">-->
-<!--        <img class="logo"  src="assets/EF.svg" alt="EF Logo"/>-->
-<!--    </a>-->
     <div id="myLinks">
         <a href="#jumpHome">home</a>
         <a href="#jumpAboutMe">about</a>
         <a href="#jumpProjects">projects</a>
-        <a href="#jumpBlog">blog</a>
         <a href="#jumpContact">contact</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
 </div>
+
 <div class="hidden hero">
     <video loop muted autoplay preload="auto">
         <source src="water.mp4" type="video/mp4" playsinline>
@@ -43,60 +36,44 @@
     </video>
     <div class="hidden caption">
         <h2>full stack developer from Bath, Somerset</h2>
-
-
-
-        <!--        SOCIAL BUTTONS-->
         <div class="socialIcons">
             <a href="mailto:e.ferrari@live.co.uk" target="_blank"><i class='bx bx-envelope'></i></a>
             <a href="https://github.com/emferrari31" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="https://www.linkedin.com/in/ferrariemma1610/" target="_blank"><i
-                    class='bx bxl-linkedin-square'></i></a>
+            <a href="https://www.linkedin.com/in/ferrariemma1610/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         </div>
     </div>
 </div>
 
-<section  id="jumpAboutMe" class="hidden aboutMeSection">
+<section id="jumpAboutMe" class="hidden aboutMeSection">
     <div class="aboutMeCard">
-        <h1>
-            Hello! I'm <span class="emma">Emma</span>, a Full Stack Developer from Bath, Somerset.
-        </h1>
+        <h1>Hello! I'm <span class="emma">Emma</span>, a Full Stack Developer from Bath, Somerset.</h1>
         <div class="aboutMeContainer">
-            <p> I'm a graduate of <a href="https://io-academy.uk/courses/full-stack-track/">Full Stack Track with iO Academy</a>  in Bath. With a background in both dog training and
-                photography, I'm a keen problem solver, empathetic, creative and I have a close eye for detail,
-                all of which I love to apply to my work. When I'm not coding, you'll find me out exploring, trying new
-                recipes and training for charity runs!
-            </p>
+            <p>I'm a graduate of <a href="https://io-academy.uk/courses/full-stack-track/">Full Stack Track with iO Academy</a> in Bath. With a background in both dog training and photography, I'm a keen problem solver, empathetic, creative, and I have a close eye for detail, all of which I love to apply to my work. When I'm not coding, you'll find me out exploring, trying new recipes, and training for charity runs!</p>
         </div>
         <div class="projBtnContainer">
             <a href="#jumpProjects"><button class="projectsBtn">Projects</button></a>
         </div>
-<!--        <img class="emmaPhoto" src="assets/scallop.svg" alt="emma">-->
     </div>
 </section>
 
-
-<div id="jumpProjects" class='hidden portfolioH1'>
+<div id="jumpProjects" class="hidden portfolioH1">
     <h1><span class="typedText"></span></h1>
 </div>
-<section class="hidden portfolioSection">
-</section>
-<box-icon name='chevron-up' type='solid' animation='burst' ></box-icon>
+<section class="hidden portfolioSection"></section>
 
-
+<box-icon name='chevron-up' type='solid' animation='burst'></box-icon>
 <a href="#jumpHome"><box-icon type='solid' name='chevron-up'></box-icon></a>
+
 <footer>
-
     <div class="hidden contact">
-        <a href="#jumpHome"> <i id="upArrow" class='bx bxs-chevron-up bx-burst' ></i></a>
-
+        <a href="#jumpHome"> <i id="upArrow" class='bx bxs-chevron-up bx-burst'></i></a>
         <h1 id="jumpContact">Say <span class="hey">hey</span></h1>
-        <p>Send me an email, find me on GitHub or connect via LinkedIn!</p><br>
+        <p>Send me an email, find me on GitHub, or connect via LinkedIn!</p><br>
         <a class="mailto" href="mailto:e.ferrari@live.co.uk" target="_blank"><i class='bx bx-envelope'></i></a>
         <a class="github" href="https://github.com/emferrari31" target="_blank"><i class='bx bxl-github'></i></a>
-        <a class="linkedin" href="https://www.linkedin.com/in/ferrariemma1610/" target="_blank"><i
-                class='bx bxl-linkedin-square'></i></a>
+        <a class="linkedin" href="https://www.linkedin.com/in/ferrariemma1610/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
     </div>
 </footer>
+
 </body>
 </html>
