added 'download cv' button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <a href="#jumpAboutMe">about</a>
         <a href="#jumpProjects">projects</a>
         <a href="#jumpContact">contact</a>
+        <a href="Emma%20Ferrari%20CV.pdf">
+            <button class="downloadBtn">Download CV</button>
+        </a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
