added simple blog page to site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a href="#jumpHome">home</a>
         <a href="#jumpAboutMe">about</a>
         <a href="#jumpProjects">projects</a>
+        <a href="blog.html">blog</a>
+
         <a href="#jumpContact">contact</a>
         <a href="Emma%20Ferrari%20CV.pdf">
             <button class="downloadBtn">Download CV</button>
@@ -66,6 +68,8 @@
 
 <box-icon name='chevron-up' type='solid' animation='burst'></box-icon>
 <a href="#jumpHome"><box-icon type='solid' name='chevron-up'></box-icon></a>
+
+
 
 <footer>
     <div class="hidden contact">
