2nd blog post added, bit more styling on blog page also

--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,11 @@
   </nav>
 </header>
 <main>
+  <div class="blogHero">
+    <h1>Blog</h1>
+    <p>Reflections | Journey to Full Stack Developer | Projects </p>
+  </div>
   <section class="blogSection">
-    <h2>Blog</h2>
     <div class="blogContainer">
       <div class="post1">
         <h1>Welcome! A little bit about me...</h1>
@@ -63,11 +66,40 @@
         </p>
       </div>
 
-<!--      <div class="post2">-->
-<!--        <h1></h1>-->
-<!--        <p>-->
-<!--        </p>-->
-<!--      </div>-->
+      <div class="post2">
+        <h1>Best way to learn is to copy, right?</h1>
+        <p>
+          I haven't got an ongoing project currently, and I've been deciding how best I should use my time to progress
+          my learning. I have so many notes on my Notion account that I'm struggling to add more without it telling me
+          to upgrade, so this morning I decided to go through my notes and just see what has settled in more and what
+          needs further investigation. Getting a little side-tracked, I came across exercises where we had to recreate
+          a website using the skills we had just learned, and I remembered how rewarding I found those tasks. With less
+          than a years experience under my belt, at times when given a task I had found it difficult to envisage, and
+          so having a brilliantly designed site already made up for you to just work out how to put it together was
+          (and still is) a learning tool I reach for a lot. I don't have to worry about designing, UX, coming up with a
+          concept and learning how. Instead, I can just focus on how.  In doing this a lot of times and working on my own
+          passion projects, my creative juices are starting to flow, and I'm getting that visual of where I'm headed,
+          which is exciting! <br><br>
+          Today I decided to have fun with replicating the login page for Nuclino. Here is their login page: <br><br>
+          <img class="blog2image1" src="Nuclino.png" alt="screenshot of Nuclino login page"><br><br>
+          And here is mine: <br> <br>
+          <img class="blog2image2" src="emmasNuclino.png" alt="screenshot of Nuclino login page"> <br><br>
+
+
+          What I enjoyed: <br>
+          I enjoyed the exercise as a whole. It warms my brain up when I'm not feeling like a particular project or
+          area of study, and I enjoy feeling inspired from the design.
+
+          <br><br>
+          My main area of learning: <br>
+          Getting the First name and Last name input fields to line up next to each other,
+          while lining up with the two fields below. <br><br>
+
+          5th December 2024
+
+
+        </p>
+      </div>
     </div>
   </section>
 </main>
