Added blog post 3

--- a/blog.html
+++ b/blog.html
@@ -84,22 +84,37 @@
           <img class="blog2image1" src="Nuclino.png" alt="screenshot of Nuclino login page"><br><br>
           And here is mine: <br> <br>
           <img class="blog2image2" src="emmasNuclino.png" alt="screenshot of Nuclino login page"> <br><br>
-
-
           What I enjoyed: <br>
           I enjoyed the exercise as a whole. It warms my brain up when I'm not feeling like a particular project or
           area of study, and I enjoy feeling inspired from the design.
-
           <br><br>
           My main area of learning: <br>
           Getting the First name and Last name input fields to line up next to each other,
           while lining up with the two fields below. <br><br>
-
           5th December 2024
-
-
         </p>
       </div>
+
+      <div class="post3">
+        <h1>PHP Refresher - Command Line Heads or Tails Game</h1>
+        <p>
+          I haven't fancied a big project for a few days - I've found myself more interested in returning to my notes
+          from my bootcamp and revisiting exercises and projects I've moved on from. There's something magical about
+          going through something you once couldn't wrap your head around and now feeling more confident and capable. <br><br>
+          Today I hopped over to my PHP module and opened up a file to explore some of the code snippets from my notes.
+          In the early stages of PHP (I want to say day 2?) we had a Heads or Tails exercise to create a simple game on
+          the CL. Wanting to test myself and refresh my memory, I started building it step by step. I started with the
+          coin toss it's in most simple format: <br><br> $coin = rand(0,1);<br> echo $coin === ? 'heads' : 'tails'; <br><br>
+          Once I had that, I built upon it, with the ability for the user to input their guess, to handling if the user
+          doesn't enter the correct type of guess, to the score and the rounds at the end. <br><br>
+          <img class="blog3image1" src="headsOrTails1.png" alt="screenshot heads or tails code"><br><br>
+          <img class="blog3image2" src="headsOrTails2.png" alt="screenshot of heads or tails code"> <br><br>
+          <img class="blog3image3" src="headsOrTails3.png" alt="screenshot of heads or tails code"> <br><br>
+          Nice to refresh my PHP brain! <br><br>
+          6th December 2024
+        </p>
+      </div>
+
     </div>
   </section>
 </main>
