--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>My Blog Page</title>
+  <title>Blog | Emma Ferrari</title>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -123,6 +123,40 @@
         </p>
       </div>
     </div>
+
+      <div class="post4">
+        <h1>Organising my brain before Christmas</h1>
+        <button class="expandBtn" onclick="toggleContent('content4')">Read More</button>
+        <div id="content4" class="content" style="display:none">
+          <p>
+            For a few weeks now I’ve been less eager to start a new project, and more keen on just focusing on theory,
+            learning via Codecademy and going through my notes. And good as that can be, I often find myself wanting to
+            learn several things at once, which slightly paralyses me. I guess I’m in a position where I’m constantly
+            thinking about how to improve my current projects, how to better my portfolio and how to build upon my
+            current knowledge, while learning new languages and frameworks. This time last year I was running around
+            like a headless chicken at my previous job, and I thought that was simply to do with the nature of my work
+            being so linked to Christmas, and so working towards that 25th deadline. And while I’m definitely not
+            calling myself a headless chicken right now, there’s definitely room for more organised thoughts and a bit
+            of a plan. <br><br>
+            Holding myself accountable (instead of an A1-sized doodle on my office floor): <br><br>
+            Projects I want to improve: <br><br>
+            - Todo App - Styling, make it more professional looking. Add an Edit Feature. <br><br>
+            Learning:<br><br>
+            - Codecademy UI/UX Course<br>
+            - Complete the Ruby Codecademy Course<br><br>
+            Skills I want to improve on:<br><br>
+            - More thorough project planning - Avoid enthusiastically jumping ahead<br>
+            - Figma<br>
+            - Technical tests - PHP, JavaScript<br>
+            - Unit testing<br><br>
+            Projects to plan/build<br><br>
+            - Recipe CRUD App<br>
+            <br><br>
+            That feels better already. <br><br>
+            12th December 2024
+          </p>
+        </div>
+      </div>
   </section>
 </main>
 </body>
