--- a/blog.html
+++ b/blog.html
@@ -157,6 +157,31 @@
           </p>
         </div>
       </div>
+
+      <div class="post5">
+        <h1>Learning Figma</h1>
+        <button class="expandBtn" onclick="toggleContent('content5')">Read More</button>
+        <div id="content5" class="content" style="display:none">
+          <p>
+            Does everyone get that giddy feeling after first discovering Figma? <br>
+            After a frustrating morning falling down a command line rabbit hole, I decided I needed a refocus for the
+            afternoon and decided to hop back into the UI/UX course I started. Within that there was a lovely section
+            on Figma, something we briefly looked at on the course but really, draw.io was our low-fidelity friend for
+            our project wire-frames.<br><br>
+            <video class="blog5video1" src="figma_blog.mp4" autoplay loop muted></video><br><br>
+            I really enjoyed this little project! Not only is Figma really nice to work with, it's really handy to be
+            able to fully immerse yourself in what exactly you're trying to achieve, without getting started and, as
+            I have done many a time on my learning curve, got lost and wished I could start again. <br><br>
+            What I've taken away from this project: <br><br>
+            - Low fidelity design initially to focus on meeting the requirements<br>
+            - High fidelity design to follow, focusing on including more detail and design choices<br>
+            - Prototype - Ability to add navigation from one page to another, gain a feel for how it flows, and so can
+            make changes before building the project <br><br>
+            I'm excited to use this for my next project!<br><br>
+            12th December 2024
+          </p>
+        </div>
+      </div>
   </section>
 </main>
 </body>
