--- a/blog.html
+++ b/blog.html
@@ -182,6 +182,31 @@
           </p>
         </div>
       </div>
+
+      <div class="post6">
+        <h1>Tidying up my todo app</h1>
+        <button class="expandBtn" onclick="toggleContent('content6')">Read More</button>
+        <div id="content6" class="content" style="display:none">
+          <p>
+            Taking a short interval of throwing my head in my hands to show you my wonderful, newly designed todo app
+            that I cannot seem to update my deployment of: <br><br>
+            <img class="blog6image1" src="ToDoApp.png" alt="Screenshot of new todo app redesign"> <br>
+            <img class="blog6image2" src="completedTasksToDoApp.png" alt="Screenshot of new todo app redesign"><br><br>
+            After having an initial whale of a time decorating my previous app to the nines with my new tailwind skills,
+            I quickly decided that while it was fun at the time, it wasn't really sitting right. It needed a real-world
+            look, something more clean and efficient. Something an actual adult would want to use. I noticed this more-so
+            when showing my friends and family, and having to explain how to use it. <br><br> It's funny the journey we
+            take when we start in a new hobby, skill or industry. I've found myself gravitating to a 'I wanna make this
+            thing really really cool' mentality (the amount of revisions of my portfolio is a true testament to that),
+            and if I'm not producing the most animated, show-stopping webpages then I'm not that impressed with myself.
+            But really, there's more skill in finding that perfect balance of accessibility and beautiful, simple
+            design. Stay classy. <br><br>
+            Right, I'm off to bury my head in Plesk and see if I can get my new design live!
+            <br><br>
+            16th December 2024
+          </p>
+        </div>
+      </div>
   </section>
 </main>
 </body>
