blog post 7 added

--- a/blog.html
+++ b/blog.html
@@ -197,16 +197,58 @@
             look, something more clean and efficient. Something an actual adult would want to use. I noticed this more-so
             when showing my friends and family, and having to explain how to use it. <br><br> It's funny the journey we
             take when we start in a new hobby, skill or industry. I've found myself gravitating to a 'I wanna make this
-            thing really really cool' mentality (the amount of revisions of my portfolio is a true testament to that),
+            thing really, really cool' mentality (the amount of revisions of my portfolio is a true testament to that),
             and if I'm not producing the most animated, show-stopping webpages then I'm not that impressed with myself.
             But really, there's more skill in finding that perfect balance of accessibility and beautiful, simple
             design. Stay classy. <br><br>
             Right, I'm off to bury my head in Plesk and see if I can get my new design live!
             <br><br>
+            I'm back, I couldn't move passed my sticking point. Instead, I dived back into my notes and I tripped and fell
+            into another mini project - To-Do app using SQLite. I had this loosely in my notes and couldn't remember
+            doing it (it's because I hadn't, it turned out) and given I was just working on my other to-do app this
+            morning, it seemed sensible to dive in. <br>
+
             16th December 2024
           </p>
         </div>
       </div>
+
+      <div class="post7">
+        <h1>To-do Apps - One with a MySQL db, one with a SQLite db...</h1>
+        <button class="expandBtn" onclick="toggleContent('content7')">Read More</button>
+        <div id="content7" class="content" style="display:none">
+          <p>
+            <img class="blog7image1" src="SQLiteToDo.png" alt="screenshot of sqlite todo app"></img><br>
+            After trying (and failing) to upload the style changes made to my to-do app, I've decided to move away and
+            focus on something I can get stuck into on this Monday afternoon, so instead I tripped and fell into a new
+            mini project - Another to-do app, this time with SQLite instead of MySQL. And understanding the difference
+            between the two. <br><br> I came across SQLite while doing a codecademy course and never really delved
+            into it. I was reading through my notes and found a code snippet I couldn't really make sense of.
+            Said-code-snippet is a to-do app, and it was a demonstration to show that using PHP, you could create a CRUD
+            application on the browser.<br>
+            My first to do app that you can see on my portfolio was built using a mysql database. This requires a server
+            to operate, whereas SQLite does not. My understanding from my research is: <br> <br>
+            MySQL:<br>
+            -> Requires a server <br>
+            -> Takes more configuration to set up
+            -> Can handle a lot of data <br>
+            -> Can handle multiple users <br><br>
+
+            SQLite:<br>
+            -> Does not require a server <br>
+            -> Takes running a short bit of code once to set it up <br>
+            -> Cannot handle a lot of data <br>
+            -> Cannot handle multiple users <br><br>
+
+            So essentially, my impression is SQLite is ideal for small projects and perhaps testing things out, whereas MySQL is more of
+            an all-rounder and better choice if you're thinking of scalability. <br><br>
+
+            16th December 2024
+          </p>
+        </div>
+      </div>
+
+
   </section>
 </main>
 </body>
